# EVE-TEST-VIDEO

./: .gitignore  CHANGELOG.md  LICENSE  README.md  affiliations_from_logs.json  esi_cache.json  pyproject.toml
eve_combat_parser/: __init__.py  affiliations.py  cli.py  constants.py  entity.py  esi.py  ewar.py  exporter.py  fights.py  models.py  module_meta.py  npc.py  parser.py  pilot_db.py  prompts.py  sde.py  ship_meta.py  text.py  timeline.py  version.py
logs/denanden/: 20260115_201152_1350587670.txt  20260115_202337_2059311182.txt  20260115_202340_94865292.txt  20260115_225541_1797692549.txt  20260115_230059_1146915702.txt
logs/testfight/: 20260115_225941_548047231.txt
output/.cache/: pilots.json
output/001_denanden/_combined/: Propulsion_Jamming_attempts.csv  capacitor_done_players.csv  capacitor_received_players.csv  combined_cap_warfare.csv  combined_damage.csv  damage_done_charges.csv  damage_done_drones.csv  damage_done_npc.csv  damage_done_players.csv  damage_received_players.csv  ewar_effects_received_players.csv  others.csv  repairs_received_players.csv
output/001_denanden/fight_001_15jan2026_20-29_TO_15jan2026_21-30/: cap_warfare_received_npc.csv  damage_done_charges.csv  damage_done_players.csv  damage_received_npc.csv  damage_received_players.csv  others.csv
output/001_denanden/fight_002_15jan2026_23-38_TO_15jan2026_23-56/: cap_warfare_received_players.csv  damage_done_players.csv  damage_received_players.csv  others.csv  repairs_done_players.csv
sde/: invMetaGroups.csv  invMetaTypes.csv
tests/: test_cli_flags.py  test_metadata_columns.py
(+366 files in other folders)
